# unpy

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: .ruff.toml  functions.pyi  generic.pyi  generics.pyi  imports.pyi  noop.pyi  pep695.pyi  pep695_type_alias.pyi  type_alias.pyi  type_aliases.pyi
pythoff/: __init__.py  _pep695.py  convert.py
tests/: test_cli.py  test_identity.py  test_py311.py  test_transformers.py  test_version_iv.py  test_visitors.py
unpy/: __init__.py  __main__.py  _cst.py  _meta.py  _py311.py  _stdlib.py  _transform.py  _types.py  _utils.py  _version_iv.py  cli.py  convert.py  exceptions.py  main.py  transformers.py  visitors.py
