[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythoff"
version = "0.1.0"
description = "Python 3.12+ stub backporter"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
authors = [
  {name = "Joren Hammudoglu", email = "jhammudoglu@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed",
]
dependencies = [
    "mainpy>=1.4.0,<2",
    "libcst>=1.4.0,<2",
    "typer-slim>=0.12.5,<1",
]

[project.urls]
Repository = "https://github.com/jorenham/pythoff"
Documentation = "https://github.com/jorenham/pythoff?tab=readme-ov-file#mainpy"
Issues = "https://github.com/jorenham/pythoff/issues"
Changelog = "https://github.com/jorenham/pythoff/releases"
Funding = "https://github.com/sponsors/jorenham"

[project.scripts]
pythoff = "pythoff.cli:app"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.cache",
    "/.github",
    "/.venv",
    "/.vscode",
    ".editorconfig",
    ".gitignore",
    ".mardownlint.yaml",
    ".pre-commit.yaml",
    ".python-version",
    "README.md",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["pythoff"]

[tool.uv]
dev-dependencies = [
  "basedpyright>=1.17.4,<2",
  "codespell>=2.3.0,<3",
  "pre-commit>=3.8.0",
  "ruff>=0.6.4,<0.7",
]

[tool.basedpyright]
ignore = ["**/.venv"]
include = ["pythoff", "examples"]
pythonPlatform = "All"
pythonVersion = "3.13"
venv = ".venv"
venvPath = "."
stubPath = "."
typeCheckingMode = "all"

[tool.ruff]
force-exclude = true
indent-width = 4
src = ["pythoff", "examples"]
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
preview = true
quote-style = "double"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["C", "D", "S101", "FBT", "CPY", "ERA", "EM", "T20", "TD", "FIX", "TRY003"]

[tool.ruff.lint.isort]
extra-standard-library = ["_typeshed", "typing_extensions"]

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
ctypes = "ct"
datetime = "dt"
libcst = "cst"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["str", "int"]
max-args = 10
max-bool-expr = 20
max-branches = 24
max-locals = 30
max-statements = 100
